--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -16,4 +16,5 @@
     <string name="sancocho">Delicioso y nutritivo Sancocho de Pescado. Preparado con bagre fresco, tubérculos, vegetales y un buen guiso para darle aún más sabor,</string>
     <string name="bocachico">"recibe este nombre gracias al por su cercania al Rio magdalena, este pescado se sala,se pone al sol, se agrega a su preparacion platano, yuca, mazorca, arracacha. Este plato se puede acompañar con arroz si lo prefieres. "</string>
     <string name="restaurant_about">Somos el mejor restaurante de comida costeña en Bogotá</string>
+    <string name="prefs_file">com.example.pruebaroom.PREFERENCE_FILE_KEY</string>
 </resources>
